--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <ul class="am-dropdown-content am-radius am-text-center">
                 <li><a href="#">重置密码</a></li>
                 <li class="am-divider"></li>
-                <li><a href="#">补全生日</a></li>
+                <li><a href="birth.html">补全生日</a></li>
                 <li class="am-divider"></li>
                 <li><a id="logic_out" href="#">登出</a></li>
             </ul>
@@ -190,18 +190,20 @@
     <img src="assets/images/star@1x.png" alt="">
 </div>
 <div>
-    <div class="am-g am-padding-vertical">
-        <div class="am-u-sm-1 am-text-left">
-            <img src="assets/images/ji.png" class="icon am-margin-top-xs">
-        </div>
-        <div class="am-u-sm-10 am-padding-left am-text-sm">代金券20元
-            <div class="am-text-xs text-grey">当天有效</div>
-        </div>
-        <div class="am-u-sm-1 text-grey am-text-xs">
-            <div class="am-fr activity-arrow am-margin-top-xs"><i class="iconfont">&#xe605;</i>
+    <a href="getPoint.html">
+        <div class="am-g am-padding-vertical">
+            <div class="am-u-sm-1 am-text-left">
+                <img src="assets/images/ji.png" class="icon am-margin-top-xs">
+            </div>
+            <div class="am-u-sm-10 am-padding-left am-text-sm">会员积分
+                <div class="am-text-xs text-grey">当天有效</div>
+            </div>
+            <div class="am-u-sm-1 text-grey am-text-xs">
+                <div class="am-fr activity-arrow am-margin-top-xs"><i class="iconfont">&#xe605;</i>
+                </div>
             </div>
         </div>
-    </div>
+    </a>
     <hr/>
     <div class="am-g am-padding-vertical">
         <div class="am-u-sm-1 am-text-left">
@@ -229,18 +231,20 @@
         </div>
     </div>
     <hr/>
-    <div class="am-g am-padding-vertical">
-        <div class="am-u-sm-1 am-text-left">
-            <img src="assets/images/fan.png" class="icon am-margin-top-xs">
-        </div>
-        <div class="am-u-sm-10 am-padding-left am-text-sm">代金券20元
-            <div class="am-text-xs text-grey">当天有效</div>
-        </div>
-        <div class="am-u-sm-1 text-grey am-text-xs">
-            <div class="am-fr activity-arrow am-margin-top-xs"><i class="iconfont">&#xe605;</i>
+    <a href="payCoupon.html">
+        <div class="am-g am-padding-vertical">
+            <div class="am-u-sm-1 am-text-left">
+                <img src="assets/images/fan.png" class="icon am-margin-top-xs">
+            </div>
+            <div class="am-u-sm-10 am-padding-left am-text-sm">消费返券啦！
+                <div class="am-text-xs text-grey">当天有效</div>
+            </div>
+            <div class="am-u-sm-1 text-grey am-text-xs">
+                <div class="am-fr activity-arrow am-margin-top-xs"><i class="iconfont">&#xe605;</i>
+                </div>
             </div>
         </div>
-    </div>
+    </a>
     <hr/>
     <div class="am-g am-padding-vertical">
         <div class="am-u-sm-1 am-text-left">
