--- a/point.html
+++ b/point.html
@@ -32,7 +32,7 @@
 
 <body>
 
-<div class="am-g am-sticky">
+<div class="am-g am-sticky bg-white">
     <header data-am-widget="header"
             class="am-header am-header-default bg-white am-animation-scale-down">
         <div class="am-header-left am-header-nav">
@@ -46,18 +46,16 @@
 
     </header>
     <hr/>
+    <div class="am-padding-sm">
+        <strong class="am-text-sm">当前积分</strong><br/>
+        <strong class="am-text-xl text-orange">2525.0</strong>
+        <button class="am-btn border-radius text-white  am-u-sm-12 am-u-sm-centered" style="background: #a4a4a4">
+            欲积分兑换，请下载并使用上宾APP
+        </button>
+    </div>
+    <div class="second-title" style="height: 8px"></div>
 </div>
-<div style="height: 50px"></div>
-
-<div class="am-padding-sm">
-    <strong class="am-text-sm">当前积分</strong><br/>
-    <strong class="am-text-xl text-orange">2525.0</strong>
-    <button class="am-btn border-radius text-white  am-u-sm-12 am-u-sm-centered" style="background: #a4a4a4">
-        欲积分兑换，请下载并使用上宾APP
-    </button>
-</div>
-<div class="second-title" style="height: 8px"></div>
-
+<div style="height: 180px"></div>
 <div class="bg-grey-white am-padding-sm am-text-sm text-grey">
     <strong class="am-text-default text-black am-margin-right-sm">本月</strong>
     <span>获取积分</span>
