--- a/power.html
+++ b/power.html
@@ -105,79 +105,86 @@
     <hr/>
     <div class="am-padding-sm">
         <!--代金券begin-->
-        <div class="border am-margin-bottom-xs border-radius">
-            <div class=" am-g am-g-collapse am-nbfc">
-                <div class="am-u-sm-9">
-                    <div class="am-padding-sm">
-                        100元代金券
-                        <div class="text-grey am-text-xs">领券后当月可使用，2016.7.1前有效</div>
+        <a href="coupon.html">
+            <div class="border am-margin-bottom-xs border-radius">
+                <div class=" am-g am-g-collapse am-nbfc">
+                    <div class="am-u-sm-9">
+                        <div class="am-padding-sm">
+                            100元代金券
+                            <div class="text-grey am-text-xs">领券后当月可使用，2016.7.1前有效</div>
+                        </div>
                     </div>
-                </div>
-                <div class="am-u-sm-3 equal-height text-white am-text-center ">
-                    <div style="background-color: #ff534f;border-radius: 0 5px;"
-                         class="equal-height am-padding-vertical-sm">
-                        <img src="assets/images/dollar.png" alt="dollar">
-                        <div class="am-text-xs am-margin-top-xs">代金券</div>
+                    <div class="am-u-sm-3 equal-height text-white am-text-center ">
+                        <div style="background-color: #ff534f;border-radius: 0 5px;"
+                             class="equal-height am-padding-vertical-sm">
+                            <img src="assets/images/dollar.png" alt="dollar">
+                            <div class="am-text-xs am-margin-top-xs">代金券</div>
+                        </div>
                     </div>
-                </div>
 
+                </div>
             </div>
-        </div>
+        </a>
         <!--代金券end-->
         <!--抵用券-->
-        <div class="border am-margin-bottom-xs border-radius">
-            <div class=" am-g am-g-collapse am-nbfc">
-                <div class="am-u-sm-9">
-                    <div class="am-padding-sm">
-                        香辣鸡翅抵用券
-                        <div class="text-grey am-text-xs">领券后当月可使用，2016.7.1前有效</div>
+        <a href="coupon.html">
+            <div class="border am-margin-bottom-xs border-radius">
+                <div class=" am-g am-g-collapse am-nbfc">
+                    <div class="am-u-sm-9">
+                        <div class="am-padding-sm">
+                            香辣鸡翅抵用券
+                            <div class="text-grey am-text-xs">领券后当月可使用，2016.7.1前有效</div>
+                        </div>
                     </div>
-                </div>
-                <div class="am-u-sm-3 equal-height text-white am-text-left">
-                    <div style="background: #df3121;border-radius: 0 5px;"
-                         class="equal-height">
-                        <img src="assets/images/gold.png" alt="dollar" style="width: 100%">
-                        <div class="am-padding-sm" style="color: #fce243;font-style: italic">
-                            <div class="am-text-xs" style="text-decoration: line-through">
-                                ￥150.0
-                            </div>
-                            <div style="line-height: 16px">￥<span class="am-text-lg">100</span>.0
-                                <div>
+                    <div class="am-u-sm-3 equal-height text-white am-text-left">
+                        <div style="background: #df3121;border-radius: 0 5px;"
+                             class="equal-height">
+                            <img src="assets/images/gold.png" alt="dollar" style="width: 100%">
+                            <div class="am-padding-sm" style="color: #fce243;font-style: italic">
+                                <div class="am-text-xs" style="text-decoration: line-through">
+                                    ￥150.0
+                                </div>
+                                <div style="line-height: 16px">￥<span class="am-text-lg">100</span>.0
+                                    <div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </a>
         <!--抵用券-->
         <!--抵用券-->
-        <div class="border am-margin-bottom-xs border-radius">
-            <div class=" am-g am-g-collapse am-nbfc">
-                <div class="am-u-sm-9">
-                    <div class="am-padding-sm">
-                        香辣鸡翅
-                        <div class="text-grey am-text-xs">领券后当月可使用，2016.7.1前有效，满500元可用100元换购150元制定商品一个</div>
+        <a href="coupon.html">
+            <div class="border am-margin-bottom-xs border-radius">
+                <div class=" am-g am-g-collapse am-nbfc">
+                    <div class="am-u-sm-9">
+                        <div class="am-padding-sm">
+                            香辣鸡翅
+                            <div class="text-grey am-text-xs">领券后当月可使用，2016.7.1前有效，满500元可用100元换购150元制定商品一个</div>
+                        </div>
                     </div>
-                </div>
-                <div class="am-u-sm-3 equal-height text-white am-text-left">
-                    <div style="background: #df3121;border-radius: 0 5px;"
-                         class="equal-height">
-                        <img src="assets/images/gold.png" alt="dollar" style="width: 100%">
-                        <div class="am-padding-sm am-text-center" style="color: #fce243;font-style: italic">
-                            <div class="am-text-xs" style="text-decoration: line-through">
-                                ￥15
-                            </div>
-                            <div style="line-height: 16px">免费
-                                <div>
+                    <div class="am-u-sm-3 equal-height text-white am-text-left">
+                        <div style="background: #df3121;border-radius: 0 5px;"
+                             class="equal-height">
+                            <img src="assets/images/gold.png" alt="dollar" style="width: 100%">
+                            <div class="am-padding-sm am-text-center" style="color: #fce243;font-style: italic">
+                                <div class="am-text-xs" style="text-decoration: line-through">
+                                    ￥15
+                                </div>
+                                <div style="line-height: 16px">免费
+                                    <div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!--抵用券-->
             </div>
-            <!--抵用券-->
-        </div>
+        </a>
+    </div>
     </div>
 </section>
 
