--- a/remainder.html
+++ b/remainder.html
@@ -25,14 +25,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="SHANGBIN"/>
 
-    <link rel="stylesheet" href="assets/css/amazeui.min.css">
+    <link rel="stylesheet" href="assets/css/amazeui.css">
     <link rel="stylesheet" href="assets/css/common.css">
 
 </head>
-
 <body>
 
-<div class="bg-white am-g am-sticky">
+<div class="bg-white am-g am-sticky" id="header">
     <header data-am-widget="header"
             class="am-header am-header-default bg-white am-animation-scale-down">
         <div class="am-header-left am-header-nav">
@@ -81,146 +80,195 @@
     <hr/>
 </div>
 <div class="bg-white" style="height: 260px"></div>
-<div class="bg-grey-white am-padding-sm am-text-sm text-grey" data-am-sticky="{top:470}">
-    <strong class="am-text-default text-black am-margin-right-sm">本月</strong>
-</div>
-<div>
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">上上谦（上海徐家汇总店）消费买单<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
-        </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-blue">-120</span>
-        </div>
+<section>
+    <div class="second-title am-g am-padding-sm am-text-sm title" data-am-sticky="{top:260}">
+        <strong class="am-text-default text-black am-margin-right-sm">本月</strong>
     </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">店内充值<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
+    <div>
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">上上谦（上海徐家汇总店）消费买单<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-blue">-120</span>
+            </div>
         </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-orange">+600.0</span>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
         </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
+        </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
+        </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
+        </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
+        </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
     </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">店内充值<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
-        </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-orange">+600.0</span>
-        </div>
+    <div class="second-title am-g am-padding-sm am-text-sm title" data-am-sticky="{top:260}">
+        <strong class="am-text-default text-black am-margin-right-sm">11月</strong>
     </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">店内充值<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
+    <div>
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
         </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-orange">+600.0</span>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
         </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
+        </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
+        </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
+        </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
+        </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
+        </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
+        </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
+        <div class="am-padding-sm">
+            <div class="am-fl" style="width: 80%">店内充值<br/>
+                <div class="am-text-xs text-grey">2015-12-22</div>
+            </div>
+            <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+                <span class="text-orange">+600.0</span>
+            </div>
+        </div>
+        <div class="am-cf"></div>
+        <hr class="am-margin-left-sm am-margin-top-sm">
     </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">店内充值<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
-        </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-orange">+600.0</span>
-        </div>
-    </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">店内充值<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
-        </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-orange">+600.0</span>
-        </div>
-    </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-</div>
-<div class="bg-grey-white am-padding-sm am-text-sm text-grey" data-am-sticky="{top:670}">
-    <strong class="am-text-default text-black am-margin-right-sm">11月</strong>
-</div>
-<div>
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">店内充值<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
-        </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-orange">+600.0</span>
-        </div>
-    </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">店内充值<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
-        </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-orange">+600.0</span>
-        </div>
-    </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">店内充值<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
-        </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-orange">+600.0</span>
-        </div>
-    </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">店内充值<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
-        </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-orange">+600.0</span>
-        </div>
-    </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">店内充值<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
-        </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-orange">+600.0</span>
-        </div>
-    </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">店内充值<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
-        </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-orange">+600.0</span>
-        </div>
-    </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-    <div class="am-padding-sm">
-        <div class="am-fl" style="width: 80%">店内充值<br/>
-            <div class="am-text-xs text-grey">2015-12-22</div>
-        </div>
-        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
-            <span class="text-orange">+600.0</span>
-        </div>
-    </div>
-    <div class="am-cf"></div>
-    <hr class="am-margin-left-sm am-margin-top-sm">
-</div>
+</section>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/amazeui.js"></script>
 
+<script>
+        ( function(  ) {
+            $.fn.sticky = $( ".title").each(function( offset, limit ) {
+                this.css( "position", "relative" );
+                var element = this
+                        , offset = offset || 0;
+                $( window ).scroll( function( event ) {
+                    var initial_position = element.offset().top - ( parseInt( element.css( "top" ), 10 ) || 0);
+                    if( ( window.pageYOffset + offset ) > initial_position ) {
+                        if( typeof( limit ) !== 'undefined' && ( ( window.pageYOffset + offset + element.height() ) > limit.offset().top ) ) {
+                            return; // do nothing
+                        } else {
+                            element.css( "top", Math.floor( window.pageYOffset - initial_position + offset ) + "px" );
+                        }
+                    } else {
+                        element.css( "top", "initial" );
+                    }
+                } );
+            });
+        } );
+
+        $( ".title").each(function(){
+            $(this).sticky();
+        })
+</script>
 </body>
 </html>
